[workspace]
members = ["crates/*"]

[workspace.package]
authors = ["Michael-F-Bryan <michaelfbryan@gmail.com>"]
edition = "2021"
homepage = "https://github.com/Michael-F-Bryan/wasmer-borealis"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Michael-F-Bryan/wasmer-borealis"
# needed for [workspace.package]
rust-version = "1.71"
version = "0.1.0"

[workspace.dependencies]
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = { version = "0.1.37", features = ["log"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = "0.11.18"
