[package]
name = "wasmer-borealis-cli"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4", features = ["derive", "env"] }
clap-verbosity-flag = "2.0.1"
directories = "5.0.1"
indexmap = { version = "1", features = ["serde"] }
once_cell = "1.18.0"
semver = { version = "1.0.18", features = ["serde"] }
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.104"
serde_yaml = "0.9.25"
shellexpand = "3.1.0"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
xshell = "0.2.5"

[[bin]]
name = "wasmer-borealis"
doc = false
path = "src/main.rs"

[dev-dependencies]
schemars = { version = "0.8.12", features = ["indexmap1"] }
