[package]
name = "wasmer-borealis-cli"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { workspace = true }
clap-verbosity-flag = "2.0.1"
cynic = { version = "3.2.2", features = ["http-reqwest"] }
directories = "5"
futures = "0.3.28"
indexmap = { version = "1", features = ["serde"] }
once_cell = "1"
reqwest = { workspace = true }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "3.1.0"
tempfile = "3.7.0"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wasmer-borealis = { version = "0.1.0", path = "../wasmer-borealis" }

[dev-dependencies]
schemars = { version = "0.8.12", features = ["indexmap1"] }

[[bin]]
name = "wasmer-borealis"
doc = false
