[package]
name = "wasmer-borealis"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
anyhow = "1"
cfg-if = "1.0.0"
cynic = { version = "3.2.2", features = ["http-reqwest"] }
directories = "5"
futures = "0.3.28"
indexmap = { version = "1", features = ["serde"] }
minijinja = "1.0.5"
once_cell = "1"
reqwest = { workspace = true }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "3.1.0"
tempfile = "3.7.0"
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }

[dev-dependencies]
schemars = { version = "0.8.12", features = ["indexmap1"] }

