[package]
name = "xtask"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.72"
clap = { version = "4", features = ["derive", "env"] }
clap-verbosity-flag = "2.0.1"
once_cell = "1.18.0"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
xshell = "0.2.5"
zip = "0.6.6"
