[package]
name = "xtask"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
clap = { workspace = true }
clap-verbosity-flag = "2"
once_cell = "1"
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
xshell = "0.2.5"
zip = "0.6.6"
